retrive/objects/Account.object
<CustomObject>
  <fields>
        <fullName>NIP__c</fullName>
        <label>VAT nr</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefiksUE__c</fullName>
        <inlineHelpText>PrefiksUE can contain only length of two characters</inlineHelpText>
        <label>PrefiksUE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vat_Percentage__c</fullName>
        <label>Vat Percentage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>